# 3d-book

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  PROMPT.md  README.md  book.json
memory/: 2026-06-25.md
models/: textured_cube.glb  textured_cube.mtl
shaders/: scene.frag  scene.vert
src/: main.cpp  third_party_impl.cpp
src/gpu/: gpu_common.h  mesh.cpp  mesh.h  shader.cpp  shader.h  texture.cpp  texture.h
src/io/: model_loader.cpp  model_loader.h  scene_loader.cpp  scene_loader.h
src/render/: renderer.cpp  renderer.h
src/scene/: book.cpp  book.h  camera.cpp  camera.h  scene.cpp  scene.h
tests/: CMakeLists.txt  test_geometry.cpp
tests/assets/: cube.glb  cube.mtl
tools/: make_sample_models.py
